build/sites/r01/domain-cluster/resources/istio-gateway-resources-v2.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-eastwestgateway-r01domain
  namespace: istio-system
spec:
  selector:
    istio: istio-eastwestgateway-r01domain
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      tls:
        mode: AUTO_PASSTHROUGH
      hosts:
        - "*.cluster.local"
---
#apiVersion: rbac.authorization.k8s.io/v1
#kind: ClusterRole
#metadata:
#  name: istio-reader-gateway-api
#rules:
#- apiGroups: ["gateway.networking.k8s.io"]
#  resources: ["gateways","gatewayclasses","httproutes","tcproutes",
#              "udproutes","tlsroutes","grpcroutes","referencegrants"]
#  verbs: ["get","list","watch"]
#---
#kind: ClusterRoleBinding
#apiVersion: rbac.authorization.k8s.io/v1
#metadata:
#  name: istio-reader-gateway-api
#subjects:
#- kind: ServiceAccount
#  name: istio-reader-service-account
#  namespace: istio-system
#roleRef:
#  kind: ClusterRole
#  name: istio-reader-gateway-api
#  apiGroup: rbac.authorization.k8s.io
